--- a/gui.ui
+++ b/gui.ui
@@ -633,11 +633,81 @@
         </property>
        </widget>
       </widget>
-      <widget class="QWidget" name="stock"/>
-      <widget class="QWidget" name="gastos"/>
-      <widget class="QWidget" name="estadisticas"/>
-      <widget class="QWidget" name="historial"/>
-      <widget class="QWidget" name="ajustes"/>
+      <widget class="QWidget" name="stock">
+       <widget class="QPushButton" name="pushButton_24">
+        <property name="geometry">
+         <rect>
+          <x>40</x>
+          <y>30</y>
+          <width>75</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Atras</string>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="gastos">
+       <widget class="QPushButton" name="pushButton_23">
+        <property name="geometry">
+         <rect>
+          <x>50</x>
+          <y>40</y>
+          <width>75</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Atras</string>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="estadisticas">
+       <widget class="QPushButton" name="pushButton_22">
+        <property name="geometry">
+         <rect>
+          <x>70</x>
+          <y>60</y>
+          <width>75</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Atras</string>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="historial">
+       <widget class="QPushButton" name="pushButton_21">
+        <property name="geometry">
+         <rect>
+          <x>190</x>
+          <y>60</y>
+          <width>75</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Atras</string>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="ajustes">
+       <widget class="QPushButton" name="pushButton_20">
+        <property name="geometry">
+         <rect>
+          <x>100</x>
+          <y>60</y>
+          <width>75</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Atras</string>
+        </property>
+       </widget>
+      </widget>
      </widget>
     </item>
    </layout>
