--- a/gui.ui
+++ b/gui.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>714</width>
     <height>600</height>
    </rect>
   </property>
@@ -230,7 +230,7 @@
          <string>Producto Nuevo</string>
         </property>
        </widget>
-       <widget class="QLineEdit" name="lineEdit">
+       <widget class="QLineEdit" name="ProductoNuevo1">
         <property name="geometry">
          <rect>
           <x>140</x>
@@ -240,14 +240,14 @@
          </rect>
         </property>
         <property name="placeholderText">
-         <string>nombre</string>
+         <string/>
         </property>
        </widget>
-       <widget class="QLineEdit" name="lineEdit_2">
+       <widget class="QLineEdit" name="ProductoNuevo2">
         <property name="geometry">
          <rect>
           <x>140</x>
-          <y>100</y>
+          <y>98</y>
           <width>113</width>
           <height>20</height>
          </rect>
@@ -256,27 +256,14 @@
          <string/>
         </property>
         <property name="placeholderText">
-         <string>detalle</string>
+         <string/>
         </property>
        </widget>
-       <widget class="QLineEdit" name="lineEdit_3">
+       <widget class="QLineEdit" name="ProductoNuevo7">
         <property name="geometry">
          <rect>
           <x>140</x>
-          <y>130</y>
-          <width>113</width>
-          <height>20</height>
-         </rect>
-        </property>
-        <property name="placeholderText">
-         <string>costo fabricacion</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="lineEdit_4">
-        <property name="geometry">
-         <rect>
-          <x>140</x>
-          <y>160</y>
+          <y>260</y>
           <width>113</width>
           <height>20</height>
          </rect>
@@ -285,40 +272,40 @@
          <string/>
         </property>
         <property name="placeholderText">
-         <string>tiempo de fabricacion</string>
+         <string/>
         </property>
        </widget>
-       <widget class="QLineEdit" name="lineEdit_5">
+       <widget class="QLineEdit" name="ProductoNuevo5">
         <property name="geometry">
          <rect>
           <x>140</x>
-          <y>190</y>
+          <y>180</y>
           <width>113</width>
           <height>20</height>
          </rect>
         </property>
         <property name="placeholderText">
-         <string>Beneficio</string>
+         <string/>
         </property>
        </widget>
-       <widget class="QLineEdit" name="lineEdit_6">
+       <widget class="QLineEdit" name="ProductoNuevo6">
         <property name="geometry">
          <rect>
           <x>140</x>
-          <y>220</y>
+          <y>210</y>
           <width>113</width>
           <height>20</height>
          </rect>
         </property>
         <property name="placeholderText">
-         <string>Precio</string>
+         <string/>
         </property>
        </widget>
        <widget class="QPushButton" name="pushButton_10">
         <property name="geometry">
          <rect>
-          <x>150</x>
-          <y>260</y>
+          <x>140</x>
+          <y>290</y>
           <width>75</width>
           <height>23</height>
          </rect>
@@ -330,8 +317,8 @@
        <widget class="QPushButton" name="pushButton_17">
         <property name="geometry">
          <rect>
-          <x>40</x>
-          <y>30</y>
+          <x>60</x>
+          <y>40</y>
           <width>75</width>
           <height>23</height>
          </rect>
@@ -343,14 +330,170 @@
        <widget class="QPushButton" name="pushButton_27">
         <property name="geometry">
          <rect>
-          <x>130</x>
-          <y>30</y>
+          <x>140</x>
+          <y>40</y>
           <width>75</width>
           <height>23</height>
          </rect>
         </property>
         <property name="text">
          <string>atras</string>
+        </property>
+       </widget>
+       <widget class="QTableWidget" name="tableWidget_3">
+        <property name="geometry">
+         <rect>
+          <x>290</x>
+          <y>70</y>
+          <width>311</width>
+          <height>211</height>
+         </rect>
+        </property>
+        <column>
+         <property name="text">
+          <string>Material</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Costo</string>
+         </property>
+        </column>
+       </widget>
+       <widget class="QLabel" name="label_16">
+        <property name="geometry">
+         <rect>
+          <x>50</x>
+          <y>130</y>
+          <width>76</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Costo variable: </string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_18">
+        <property name="geometry">
+         <rect>
+          <x>70</x>
+          <y>160</y>
+          <width>50</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Costo fijo:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_20">
+        <property name="geometry">
+         <rect>
+          <x>45</x>
+          <y>214</y>
+          <width>79</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Precio de venta:</string>
+        </property>
+       </widget>
+       <widget class="QCheckBox" name="checkBox">
+        <property name="geometry">
+         <rect>
+          <x>143</x>
+          <y>235</y>
+          <width>105</width>
+          <height>17</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>redondear precio</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_21">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>180</y>
+          <width>115</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>% Margen de ganancia:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_22">
+        <property name="geometry">
+         <rect>
+          <x>90</x>
+          <y>100</y>
+          <width>40</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Detalle: </string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_23">
+        <property name="geometry">
+         <rect>
+          <x>90</x>
+          <y>70</y>
+          <width>44</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Nombre: </string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_24">
+        <property name="geometry">
+         <rect>
+          <x>23</x>
+          <y>263</y>
+          <width>108</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Tiempo de fabricacion:</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="ProductoNuevo3">
+        <property name="geometry">
+         <rect>
+          <x>142</x>
+          <y>123</y>
+          <width>113</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="placeholderText">
+         <string/>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="ProductoNuevo4">
+        <property name="geometry">
+         <rect>
+          <x>140</x>
+          <y>150</y>
+          <width>113</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="placeholderText">
+         <string/>
         </property>
        </widget>
       </widget>
@@ -840,13 +983,6 @@
       </widget>
      </widget>
     </item>
-    <item>
-     <widget class="QLabel" name="estado">
-      <property name="text">
-       <string>TextLabel</string>
-      </property>
-     </widget>
-    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -854,7 +990,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>714</width>
      <height>21</height>
     </rect>
    </property>
