--- a/gui.ui
+++ b/gui.ui
@@ -18,7 +18,7 @@
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="presentacion">
        <widget class="QLabel" name="label">
@@ -340,25 +340,15 @@
          <string>atras</string>
         </property>
        </widget>
-       <widget class="QTableWidget" name="tableWidget_3">
+       <widget class="QTableView" name="tableView_3">
         <property name="geometry">
          <rect>
           <x>290</x>
-          <y>70</y>
+          <y>120</y>
           <width>311</width>
-          <height>211</height>
+          <height>181</height>
          </rect>
         </property>
-        <column>
-         <property name="text">
-          <string>Material</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>Costo</string>
-         </property>
-        </column>
        </widget>
        <widget class="QLabel" name="label_16">
         <property name="geometry">
@@ -494,6 +484,45 @@
         </property>
         <property name="placeholderText">
          <string/>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="pushButton_30">
+        <property name="geometry">
+         <rect>
+          <x>470</x>
+          <y>60</y>
+          <width>88</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Agregar material</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_17">
+        <property name="geometry">
+         <rect>
+          <x>300</x>
+          <y>310</y>
+          <width>114</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Cantidad de materiales:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_19">
+        <property name="geometry">
+         <rect>
+          <x>430</x>
+          <y>310</y>
+          <width>47</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
         </property>
        </widget>
       </widget>
@@ -978,6 +1007,32 @@
         </property>
         <property name="text">
          <string>test</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="lineEdit">
+        <property name="geometry">
+         <rect>
+          <x>110</x>
+          <y>210</y>
+          <width>113</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="placeholderText">
+         <string>Costos Fijos</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="pushButton_29">
+        <property name="geometry">
+         <rect>
+          <x>230</x>
+          <y>210</y>
+          <width>75</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Cargar</string>
         </property>
        </widget>
       </widget>
